<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.librarymanager.SignupActivity" >

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="37dp"
            android:ems="10"
            android:hint="@string/signup_name" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_edit"
            android:layout_below="@+id/name_edit"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/signup_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password_edit"
            android:layout_below="@+id/password_edit"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/signup_confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/confirm_password_edit"
            android:layout_below="@+id/confirm_password_edit"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/signup_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/signup_add_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignRight="@+id/phone_number_edit"
            android:layout_below="@+id/phone_number_edit"
            android:layout_marginRight="18dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/signup_button_shape"
            android:shadowColor="#68E848"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/signup_add_account"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
    </RelativeLayout>

</ScrollView>